trying to prevent user scaling on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -21,42 +21,42 @@ header{
     background-color: $primary-color;
     border-bottom:2px solid;
     border-top:2px solid;
+    .navbar-nav {
+        display: inline-block;
+        float: none;
+        font-size: 20px;
+        color: $second-color;
+        font-family: 'Concert One', cursive;
 
+    }
+    .navbar-collapse {
+        text-align: center;
+        border-top:none;
+        box-shadow:none;
+    }
+    .navbar-header{
+        float: left;
+        padding-left: 15px;
+        padding-top: 15px;
+        padding-bottom: 5px;
+        text-align: center;
+        width: 100%;
+    }
 }
-.navbar .navbar-nav {
-    display: inline-block;
-    float: none;
-    font-size: 20px;
-    color: $second-color;
-    font-family: 'Concert One', cursive;
 
-}
-.navbar .navbar-collapse {
-    text-align: center;
-    border-top:none;
-    box-shadow:none;
-}
-.navbar .navbar-header{
-    float: left;
-    padding-left: 15px;
-    padding-top: 15px;
-    padding-bottom: 5px;
-    text-align: center;
-    width: 100%;
-}
 .navbar-default .navbar-brand {
     font-family: 'Concert One', cursive;
     font-size: 48px;
     float:none;
     color: $second-color;
 }
-.navbar-default .navbar-toggle .icon-bar {
-    background-color: $second-color;
-}
 .navbar-default .navbar-toggle {
     border: 2px solid;
     margin-right: 0px;
     margin-top: 0px;
+    .icon-bar {
+        background-color: $second-color;
+    }
 }
 .nav.navbar-nav{
     margin: 0px -15px;
